# CXXRitoFile

./: .gitignore  .gitmodules  CMakeLists.txt  PLAN.md  README.md  TODO.md
CXXRitoFile/: CMakeLists.txt  CheckModInfo.cpp  CheckSkinHack.cpp  TestRito.cpp  mod-check.cpp
CXXRitoFile/include/: anm.hpp  bin.hpp  binary_stream.hpp  hash.hpp  mapgeo.hpp  skn.hpp  structs.hpp  tex.hpp  wad.hpp
CXXRitoFile/src/: anm.cpp  bin.cpp  hash.cpp  mapgeo.cpp  skn.cpp  tex.cpp  wad.cpp
